# fine-tune-studio

./: .gitignore  Makefile  Note.md  README.md  Syllabus.md  Week0.md  pyproject.toml
.github/workflows/: ci.yml
core/: memory.py
core/align/: dpo.py
core/nn/: block.py
core/peft/: lora.py
scripts/: hardware_probe.py  remote_train.sh
tests/: test_smoke.py
